Minor changes (fixing the navbar on small mobiles).

--- a/scss-feladatok-sitebuilding/assets/css/style.css
+++ b/scss-feladatok-sitebuilding/assets/css/style.css
@@ -109,13 +109,19 @@ p,
 
 .navbar {
   position: fixed;
-  padding: 1rem 4rem;
+  padding: 1rem 3rem;
   top: 0;
   width: 100%;
 }
 @media only screen and (min-width: 992px) {
   .navbar {
     padding: 1rem 20rem;
+  }
+}
+@media only screen and (max-width: 640px) {
+  .navbar {
+    padding: 0.4rem;
+    margin: 0;
   }
 }
 .navbar-brand {
@@ -138,7 +144,7 @@ p,
 .navbar-toggler {
   color: #000000;
   border: 0.2rem solid #b8c0c7;
-  padding: 0.8rem;
+  padding: 0.7rem;
 }
 .navbar-collapse {
   justify-content: flex-end;
