--- a/scss-feladatok-sitebuilding/assets/scss/components/_navbar.scss
+++ b/scss-feladatok-sitebuilding/assets/scss/components/_navbar.scss
@@ -1,12 +1,17 @@
 .navbar {
     position: fixed;
-    padding: 1rem 4rem;
+    padding: 1rem 3rem;
     top: 0;
     width: 100%;
 
     @include tablet-up {
         padding: 1rem 20rem;
     };
+
+    @include mobile-down {
+        padding: 0.4rem;
+        margin: 0;
+    }
 
     &-brand {
         color: let(colors-yellow);
@@ -32,7 +37,7 @@
     &-toggler {
         color: let(colors-black);
         border: 0.2rem solid let(colors-grey);
-        padding: 0.8rem;
+        padding: 0.7rem;
     };
 
     &-collapse {
