--- a/scss-feladatok-sitebuilding/assets/scss/mixins/_mixins.scss
+++ b/scss-feladatok-sitebuilding/assets/scss/mixins/_mixins.scss
@@ -8,4 +8,10 @@
     @media only screen and (max-width: let(breakpoints-tablet)) {
         @content
     }
+};
+
+@mixin mobile-down {
+    @media only screen and (max-width: let(breakpoints-mobile)) {
+        @content
+    }
 }
